Add ability to generate bootstrap admin token (#432)
Co-authored-by: Robin Duhan <52245137+RobinDuhan@users.noreply.github.com>

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/defaults/main.yml
@@ -51,6 +51,8 @@ artifactory_allowNonPostgresql: false
 # Default username and password, uncomment and change to manage with ansible
 # artifactory_admin_username: admin
 # artifactory_admin_password: password
+# Set this to true to generate a bootstrap admin token - https://jfrog.com/help/r/jfrog-installation-setup-documentation/create-an-automatic-admin-token
+artifactory_generate_bootstrap_token: false
 artifactory_service_file: /lib/systemd/system/artifactory.service
 # Provide systemyaml content below with 2-space indentation
 artifactory_systemyaml: |-
@@ -93,10 +95,10 @@ artifactory_binarystore: |-
 artifactory_systemyaml_override: false
 # Allow artifactory user to create crontab rules
 artifactory_allow_crontab: false
-# Provide access config patch content 
-artifactory_access_config_patch: ""
+# Provide access config patch content
+artifactory_access_config_patch: |-
 # security:
 #   authentication:
 #     mtls:
-#       enabled: true                  
+#       enabled: true
 #       extraction-regex: (.*)
