--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/install.yml
@@ -170,16 +170,33 @@
     group: "{{ xray_group }}"
     recurse: true
 
-- name: Install xray as a service
-  become: true
-  ansible.builtin.command: "{{ xray_archive_service_cmd }}"
-  args:
-    chdir: "{{ xray_install_script_path }}"
-    creates: "{{ xray_service_file }}"
-  register: check_service_status_result
+- name: Include interactive installer scripts
+  ansible.builtin.include_vars: script/archive.yml
 
-- name: Restart xray
-  ansible.builtin.meta: flush_handlers
+- name: Install xray
+  ansible.builtin.include_tasks: expect.yml
+  vars:
+    exp_executable_cmd: "./install.sh -u {{ xray_user }} -g {{ xray_group }}"
+    exp_dir: "{{ xray_install_script_path }}"
+    exp_scenarios: "{{ xray_installer_scenario['main'] }}"
+  args:
+    apply:
+      environment:
+        YQ_PATH: "{{ xray_thirdparty_path }}/yq"
+  when: install_wrapper_script.stat.exists
+
+- name: Ensure /opt/jfrog/xray directory has correct ownership
+  become: true
+  ansible.builtin.file:
+    path: "{{ xray_home }}"
+    owner: xray
+    group: xray
+    recurse: yes
+
+- name: Restart Xray
+  become: true
+  become_user: xray
+  ansible.builtin.command: "{{ xray_home }}/app/bin/xray.sh start"
   when:
     - xray_start_service | bool
 
