--- a/Openshift4/RedHatImages/Dockerfile.redhat-ubi-rt7
+++ b/Openshift4/RedHatImages/Dockerfile.redhat-ubi-rt7
@@ -13,6 +13,7 @@ LABEL name="JFrog Artifactory Pro" \
       description="JFrog Artifactory Pro image based on the Red Hat Universal Base Image." \
       vendor="JFrog" \
       summary="JFrog Artifactory Pro (Red Hat UBI)" \
+      maintainer="Jfrog for Redhat Openshift" \
       com.jfrog.license_terms="https://jfrog.com/artifactory/eula/"
 
 # Environment needed for Artifactory
