--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/Debian-ownstream.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/Debian-ownstream.yml
@@ -1,5 +1,5 @@
 - name: ensure apt-transport-https is installed
-  anible.builtin.napt:
+  anible.builtin.apt:
     name: apt-transport-https
     state: present
 
