[ansible] JFrog Platform 11.1.0 release

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/RedHat-ownstream.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/RedHat-ownstream.yml
@@ -1,6 +1,8 @@
-- name: Enable nginx from AppStream
+- name: Install nginx module from AppStream
   become: true
-  ansible.builtin.command: "yum module enable -y nginx:{{ nginx_module }}"
+  ansible.builtin.yum:
+    name: "@nginx:{{ nginx_module }}"
+    state: present
 
 - name: Update yum cache
   become: true
