--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/meta/main.yml
@@ -15,12 +15,14 @@ galaxy_info:
         - 9
     - name: Ubuntu
       versions:
-        - bionic
         - focal
         - jammy
     - name: Debian
       versions:
         - buster
         - bullseye
+    - name: Amazon
+      versions:
+        - 3
   galaxy_tags:
     - jfrog
