--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/main.yml
@@ -1,9 +1,12 @@
 - name: Check required variables
-  ansible.builtin.fail: msg="Variable '{{ item }}' is not defined"
-  when: item not in vars
+  ansible.builtin.fail: msg="Variable '{{ item }}' is not defined, empty, or contains only placeholder text"
+  when: 
+    - (vars[item] is not defined) or (vars[item] | string | trim | length == 0) or (vars[item] | trim | regex_search('^#'))
+    - artifactory_nginx_ssl_enabled is defined
+    - artifactory_nginx_ssl_enabled | bool
   loop:
-    - certificate
-    - certificate_key
+    - ssl_certificate
+    - ssl_certificate_key
     - server_name
 
 - name: Install upstream packages
@@ -22,7 +25,7 @@
   register: install_nginx
   retries: 5
   delay: 60
-  until: install_nginx is success
+  until: install_nginx is succeeded
 
 - name: Configure main nginx conf file.
   become: true
@@ -34,9 +37,6 @@
     mode: '0755'
 
 - name: Configure redirect nginx conf
-  when:
-    - artifactory_nginx_ssl_enabled is defined
-    - artifactory_nginx_ssl_enabled | bool
   become: true
   ansible.builtin.copy:
     src: redirect_http_to_https.conf
@@ -44,7 +44,10 @@
     owner: root
     group: root
     mode: '0755'
-  when: redirect_http_to_https_enabled | bool
+  when: 
+    - redirect_http_to_https_enabled | bool
+    - artifactory_nginx_ssl_enabled is defined
+    - artifactory_nginx_ssl_enabled | bool
   notify: Restart nginx
 
 - name: Configure the artifactory nginx conf
@@ -88,19 +91,53 @@
       become: true
       ansible.builtin.template:
         src: certificate.pem.j2
-        dest: "{{ ssl_certificate_path }}/{{ ssl_certificate }}"
+        dest: "{{ ssl_certificate_path }}/{{ ssl_certificate_name }}"
         mode: '0644'
       notify: Restart nginx
-      no_log: true
+      no_log: false
 
     - name: Configure key
       become: true
       ansible.builtin.template:
         src: certificate.key.j2
-        dest: "{{ ssl_certificate_key_path }}/{{ ssl_certificate_key }}"
+        dest: "{{ ssl_certificate_key_path }}/{{ ssl_certificate_key_name }}"
         mode: '0600'
       notify: Restart nginx
-      no_log: true
+      no_log: false
+
+- name: Ensure mtls_ca_certificate_key_path exists
+  become: true
+  ansible.builtin.file:
+    path: "{{ mtls_ca_certificate_path }}"
+    state: directory
+    mode: 0755
+  when: 
+    - mtls_ca_certificate_install
+    - artifactory_version is version('7.77.0', '>=')
+
+- name: Configure mtls ca certificate
+  become: true
+  ansible.builtin.template:
+    src: certificate.crt.j2
+    dest: "{{ mtls_ca_certificate_path }}/{{ mtls_mtls_ca_certificate_crt_name }}"
+    mode: 0644
+  notify: Restart nginx
+  no_log: true
+  when: 
+    - mtls_ca_certificate_install
+    - artifactory_version is version('7.77.0', '>=')
+
+- name: Configure mtls ca key
+  become: true
+  ansible.builtin.template:
+    src: certificate.cakey.j2
+    dest: "{{ mtls_ca_certificate_path }}/{{ mtls_mtls_ca_certificate_key_name }}"
+    mode: 0600
+  notify: Restart nginx
+  no_log: true
+  when: 
+    - mtls_ca_certificate_install
+    - artifactory_version is version('7.77.0', '>=')
 
 - name: Restart nginx
   ansible.builtin.meta: flush_handlers
