--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/Debian-upstream.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/Debian-upstream.yml
@@ -4,14 +4,14 @@
     url: https://nginx.org/keys/nginx_signing.key
     state: present
 
-- name: Add nginx stable repo
+- name: Add nginx repo
   become: true
   ansible.builtin.copy:
     dest: /etc/apt/sources.list.d/nginx.list
     owner: root
     group: root
     mode: '0644'
-    content: deb https://nginx.org/packages/{{ distro_family }} {{ distro_codename }} nginx
+    content: deb {{ nginx_upstream_repo_baseurl }}/{{ ansible_distribution | lower }}/ {{ ansible_distribution_release }} nginx
   vars:
     distro_family: "{{ ansible_distribution | lower }}"
     distro_codename: "{{ ansible_distribution_release }}"
