--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/vars/Debian.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/vars/Debian.yml
@@ -7,7 +7,7 @@ default_postgresql_external_pid_file: /var/run/postgresql/{{ postgres_version }}
 default_postgres_apt_key_id: '0x7FCC7D46ACCC4CF8'
 default_postgres_apt_key_url: https://www.postgresql.org/media/keys/ACCC4CF8.asc
 default_postgres_apt_repository_repo: >-
-    {%- if ansible_distribution_release == 'bionic' -%}
+    {%- if ansible_distribution_release in ['bionic', 'focal'] -%}
         deb https://apt-archive.postgresql.org/pub/repos/apt {{ ansible_distribution_release }}-pgdg main
     {%- else -%}
         deb https://apt.postgresql.org/pub/repos/apt/ {{ ansible_distribution_release }}-pgdg main
