--- a/.github/workflows/ansible-update.yml
+++ b/.github/workflows/ansible-update.yml
@@ -84,9 +84,25 @@ jobs:
           rm -rf "$COLLECTION_DIR"/*
           
           # Download and extract latest collection from JFrog Artifactory
-          curl -L -o platform.tar.gz "${ARTIFACTORY_URL}/jfrog-platform-${VERSION}.tar.gz"
+          echo "Downloading from: ${ARTIFACTORY_URL}${VERSION/jfrog-platform-${VERSION}.tar.gz"
+          if ! curl -L -f -o platform.tar.gz "${ARTIFACTORY_URL}${VERSION}jfrog-platform-${VERSION}.tar.gz"; then
+            echo "Error: Failed to download collection from Artifactory"
+            exit 1
+          fi
+
+          # Verify the downloaded file
+          if [ ! -s platform.tar.gz ]; then
+            echo "Error: Downloaded file is empty"
+            exit 1
+          fi
+
+          # Create tmp directory and extract
           mkdir -p tmp
-          tar -xzf platform.tar.gz -C tmp
+          if ! tar -xzf platform.tar.gz -C tmp; then
+            echo "Error: Failed to extract the collection. Invalid tar.gz format"
+            cat platform.tar.gz | head -n 5
+            exit 1
+          fi
           
           # List contents to debug
           echo "Extracted contents:"
